<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InsertionSort">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/insertion_sort"
                android:textColor="?android:attr/colorForeground"
                android:textSize="22sp"
                app:fontFamily="@font/rubik_italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_num1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num6"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num7"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num8"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_delay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/sec"
                android:textSize="19sp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sb_delay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:stepSize="0.25"
                android:value="1.25"
                android:valueFrom="0.25"
                android:valueTo="3.5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/previous"
                    android:gravity="center"
                    android:src="@drawable/previous"
                    app:backgroundTint="@color/colorAccent"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/stage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/stage"
                    android:gravity="center"
                    android:src="@drawable/play"
                    app:backgroundTint="@color/colorAccent"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/next"
                    android:gravity="center"
                    android:src="@drawable/next"
                    app:backgroundTint="@color/colorAccent"
                    app:tint="@color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/generate"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:text="@string/generate"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/sort_ins"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/task"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/task4"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="12"
                android:hint="@string/answer"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btn_save"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:text="@string/check"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>