<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StupidSort">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/sort_intro"
                android:textColor="?android:attr/colorForeground"
                android:textSize="21sp"
                app:fontFamily="@font/rubik_italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt_num1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num6"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num7"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/st_sort"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:text="@string/stupid_sort"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/whatIsIt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/whatIsSort"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/SortIntroduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="@string/sort_introduction"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/soldiers"
                app:srcCompat="@drawable/soldiers" />

            <TextView
                android:id="@+id/SortStupid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/sort_stupid"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/task1"
                android:textColor="#000000"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:ems="12"
                    android:hint="@string/answer"
                    android:inputType="textPersonName"
                    android:layout_marginStart="20dp" />

                <Button
                    android:id="@+id/btnSave"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="2"
                    android:background="@drawable/button_shape"
                    android:gravity="center"
                    android:text="@string/check"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>