<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SegmentTree">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/st"
                android:textColor="?android:attr/colorForeground"
                android:textSize="21sp"
                app:fontFamily="@font/rubik_italic" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/TvDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/sec"
                android:textSize="19sp" />

            <SeekBar
                android:id="@+id/SbDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:max="4000"
                android:progress="1250" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/st"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_shape"
                    android:gravity="center"
                    android:text="@string/construction"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/st2"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_shape"
                    android:gravity="center"
                    android:text="@string/sum"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/St"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/s_t"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>